--- a/resume/package.json
+++ b/resume/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://chahers.github.io/mishaaisyah",
+  "homepage": "https://chahers.github.io/mishaaisyah/",
   "name": "resume",
   "version": "0.1.0",
   "private": true,
